4장, 5장까지 완료

--- a/2주차/firstproject/3장.md
+++ b/2주차/firstproject/3장.md
@@ -1,9 +1,9 @@
 <h1>3장</h1>
 <h3>폼 데이터를 DTO로 받기</h3>
-폼 데이터(Form Data) : HTML 요소인 <form> 태그에 실려 전송되는 데이터<br/>
-DTO(Data Transfer Object) : <form> 태그에 실어 보낸 데이터 객체, 최종적으로 데이터베이스에 저장됨<br/><br/>
+폼 데이터(Form Data) : HTML 요소인 <\form> 태그에 실려 전송되는 데이터<br/>
+DTO(Data Transfer Object) : <\form> 태그에 실어 보낸 데이터 객체, 최종적으로 데이터베이스에 저장됨<br/><br/>
   
-1. 뷰 페이지(new.mustache)를 만들고 <form> 태그의 action 속성으로 데이터를 어디로 보낼지(action="/articles/create"), method 속성으로 데이터를 어떻게 보낼지 (method="post") 정의합니다.
+1. 뷰 페이지(new.mustache)를 만들고 <\form> 태그의 action 속성으로 데이터를 어디로 보낼지(action="/articles/create"), method 속성으로 데이터를 어떻게 보낼지 (method="post") 정의합니다.
 2. 컨트롤러(ArticleController.java)를 만들고 PostMapping 방식으로 URL 주소를 연결(@PostMapping("/articles/create"))합니다.
 3. 전송받은 데이터를 담아 둘 객체인 DTO(ArticleForm.java)를 만듭니다.
 4. 컨트롤러에서 폼 데이터를 전송받아 DTO에 담습니다.
@@ -29,3 +29,30 @@ JPA(Java Persistence API) : 자바 언어로 DB에 명령을 내리는 도구<br
 + INSERT: 테이블에 데이터를 생성하는 SQL 문
 + SELECT: 테이블에 데이터를 조회하는 SQL 문
 ***
+
+<h1>4장</h1>
+<h2>롬복과 리팩터링</h2>
+롬복은 코드를 간소화해 주는 라이브러리입니다.
+리팩터링은 코드의 기능에는 변함이 없이 코드의 구조 또는 성능을 개선하는 작업을 말합니다.
+
++ build.gradle: 롬복을 설치하기 위해 값 변경이 필요한 파일
++ @AllArgsConstructor: 모든 필드를 매개변수로 하는 생성자를 만드는 롬복 어노테이션
++ @ToString: toString() 메서드를 대체하는 롬복 어노테이션
++ @Slf4j: 로깅 기능을 사용하기 위해 필요한 롬복 어노테이션
++ log.info(): 출력하기 원하는 데이터를 로그로 찍기 위해 사용하는 구문
+***
+
+<h1>5장</h1>
+<h2>게시글 읽기: Read</h2>
+데이터 조회 과정
+
+1. 사용자가 데이터를 조회해 달라고 웹 페이지에서 URL 요청을 보냅니다.
+2. 서버의 컨트롤러가 요청을 받아 해당 URL에서 찾으려는 데이터 정보를 리파지터리에 전달합니다.
+3. 리파지터리는 정보를 가지고 DB에 데이터 조회를 요청합니다.
+4. DB는 해당 데이터를 찾아 이를 엔티티로 반환합니다.
+5. 반환된 엔티티는 모델을 통해 뷰 템플릿으로 전달됩니다.
+6. 최종적으로 결과 뷰 페이지가 완성돼 사용자의 화면에 출력됩니다.
+
++ @PathVariable이란 URL 요청으로 들어온 전달값을 컨트롤러의 매개변수로 가져오는 어노테이션입니다.
++ findById()이란 JPA의 CrudRepository가 제공하는 메서드로, 특정 엔티티의 id 값을 기준으로 데이터를 찾아 Optional 타입으로 반환합니다.
++ findAll()이란 JPA의 CrudRepository가 제공하는 메서드로, 특정 엔티티를 모두 가져와 Iterable 타입으로 반환합니다.
